--- a/src/app/Components/about-us/about-us.component.html
+++ b/src/app/Components/about-us/about-us.component.html
@@ -17,12 +17,12 @@
                 alt="Isaac Sofan" style="width:100%">
             <div class="container">
                 <h2>Isaac Amin Sofan Hernandez.</h2>
-                <p class="title">CEO & Founder</p>
+                <p class="title">CEO & Fundador</p>
                 <p>Soy un experto en marketing digital con una amplia experiencia en SEO, publicidad en redes sociales y
                     marketing de contenidos. Ha ayudado a muchas empresas a mejorar su presencia en línea y a aumentar
                     sus ventas a través de estrategias de marketing efectivas.</p>
                 <br>
-                <p><button class="button">Contact</button></p>
+                <p><button class="button">Contacto</button></p>
             </div>
         </div>
     </div>
@@ -33,11 +33,11 @@
                 alt="Yan Tano" style="width:100%">
             <div class="container">
                 <h2>Yan Carlos Tano Espitia.</h2>
-                <p class="title">Operation Director</p>
+                <p class="title">Director de Operaciones</p>
                 <p>Soy un desarrollador de software experimentado con una sólida formación en ingeniería de software. Ha
                     trabajado en una variedad de proyectos de desarrollo de software, desde aplicaciones móviles hasta
                     sistemas empresariales complejos.</p>
-                <p><button class="button">Contact</button></p>
+                <p><button class="button">Contacto</button></p>
             </div>
         </div>
     </div>
@@ -48,12 +48,12 @@
                 alt="Jaider Lopez" style="width:100%">
             <div class="container">
                 <h2>Jaider Lopez Tuberquia.</h2>
-                <p class="title">Designer</p>
+                <p class="title">Diseñador</p>
                 <p>Soy un diseñador gráfico talentoso con un ojo para el detalle y una pasión por la creatividad. Ha
                     trabajado en varios proyectos de diseño gráfico, desde la creación de logotipos hasta el diseño de
                     sitios web y aplicaciones móviles.</p>
                 <br>
-                <p><button class="button">Contact</button></p>
+                <p><button class="button">Contacto</button></p>
             </div>
         </div>
     </div>
