--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -2,28 +2,28 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-6">
-                <h6>About</h6>
+                <h6>Acerda de</h6>
                 <p class="text-justify">
                     Nuestra plataforma en línea ha sido diseñada para conectar a los empleadores con trabajadores domésticos calificados de manera rápida y eficiente. Facilitamos el proceso de encontrar y contratar empleados domésticos al permitir a los empleadores buscar trabajadores por habilidades, experiencia y ubicación.
                 </p>
             </div>
 
             <div class="col-xs-6 col-md-3">
-                <h6>Category</h6>
+                <h6>Categoría</h6>
                 <ul class="footer-links">
-                    <li><a routerLink="/profiles">Profiles / Employees</a></li>
-                    <li><a routerLink="/offers">Offers / Employers</a></li>
+                    <li><a routerLink="/profiles">Perfiles / Empleados</a></li>
+                    <li><a routerLink="/offers">Ofertas / Empleadores</a></li>
                 </ul>
             </div>
 
             <div class="col-xs-6 col-md-3">
-                <h6>Quick Links</h6>
+                <h6>Enlaces Rápidos</h6>
                 <ul class="footer-links">
-                    <li><a routerLink="/about-us">About Us</a></li>
-                    <li><a routerLink="/contact-us">Contact Us</a></li>
-                    <li><a routerLink="/contribute">Contribute</a></li>
-                    <li><a routerLink="/privacy-policy">Privacy Policy</a></li>
-                    <li><a routerLink="/sitemap">Sitemap</a></li>
+                    <li><a routerLink="/about-us">Sobre Nosotros</a></li>
+                    <li><a routerLink="/contact-us">Contáctanos</a></li>
+                    <li><a routerLink="/contribute">Contribuir</a></li>
+                    <li><a routerLink="/privacy-policy">Política de Privacidad</a></li>
+                    <li><a routerLink="/sitemap">Mapa del Sitio</a></li>
                 </ul>
             </div>
         </div>
