--- a/src/app/Components/offerts/offerts.component.html
+++ b/src/app/Components/offerts/offerts.component.html
@@ -13,8 +13,8 @@
                         {{offer.others}}
                     </p>
                     <a (click)="viewMoreInfo(offer)" class="read-more">
-                        Read more <span class="sr-only">
-                            about {{offer.name}}
+                        Leer más <span class="sr-only">
+                            Acerca de {{offer.name}}
                         </span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd"
