Fix Politicas de Privacidad

--- a/src/app/Components/register/register.component.html
+++ b/src/app/Components/register/register.component.html
@@ -266,7 +266,8 @@
                         <option value="Libre">Libre</option>
                     </select>
                 </div>
-                <small class="text-muted">Campos Marcados con [*] son Obligatorios.</small>
+                <small class="text-muted">Campos Marcados con [*] son Obligatorios. </small>
+                <small class="text-muted">Aceptas las Condiciones de uso, la Política de Privacidad y la Política de Tratamiento de Datos Personales.</small>
                 <br>
                 <input type="submit" class="btn btn-success" (click)="submit()" [value]="btn">
             </div>
