Manual de Usuario

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -14,6 +14,9 @@
                 <li class="nav-item">
                     <a class="nav-link mx-2" routerLink="/offers">Ofertas / Empleadores</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link mx-2" routerLink="/sitemap">Manual de Uso</a>
+                </li>
             </ul>
             <ul class="navbar-nav ms-auto" *ngIf="isLogged">
 
