--- a/src/app/Components/sitemap/sitemap.component.html
+++ b/src/app/Components/sitemap/sitemap.component.html
@@ -1,1 +1,9 @@
-<p>sitemap works!</p>
+<div class="manual">
+    <img [src]="imgSrc1" alt="">
+    <img [src]="imgSrc2" alt="">
+    <img [src]="imgSrc3" alt="">
+    <img [src]="imgSrc4" alt="">
+    <img [src]="imgSrc5" alt="">
+    <img [src]="imgSrc6" alt="">
+    <img [src]="imgSrc7" alt="">
+</div>
