--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -23,7 +23,7 @@
                     <li><a routerLink="/contact-us">Contáctanos</a></li>
                     <li><a routerLink="/contribute">Contribuir</a></li>
                     <li><a routerLink="/privacy-policy">Política de Privacidad</a></li>
-                    <li><a routerLink="/sitemap">Mapa del Sitio</a></li>
+                    <li><a routerLink="/sitemap">Manual de Uso</a></li>
                 </ul>
             </div>
         </div>
