--- a/src/app/Components/register/register.component.html
+++ b/src/app/Components/register/register.component.html
@@ -267,7 +267,7 @@
                     </select>
                 </div>
                 <small class="text-muted">Campos Marcados con [*] son Obligatorios. </small>
-                <small class="text-muted">Aceptas las Condiciones de uso, la Política de Privacidad y la Política de Tratamiento de Datos Personales.</small>
+                <small class="text-muted">Aceptas las Condiciones de uso, la <a routerLink="/privacy-policy">Política de Privacidad</a> y la Política de Tratamiento de Datos Personales.</small>
                 <br>
                 <input type="submit" class="btn btn-success" (click)="submit()" [value]="btn">
             </div>
