--- a/src/app/Components/privacy-policy/privacy-policy.component.css
+++ b/src/app/Components/privacy-policy/privacy-policy.component.css
@@ -28,3 +28,11 @@ p {
   margin-left: 25%;
   margin-right: 25%;
 }
+
+@media only screen and (max-width: 600px) {
+  p {
+    margin-left: 0; 
+    margin-right: 0;
+    width: 100%; 
+  }
+}
